--- a/public/tpl/auth/index.html
+++ b/public/tpl/auth/index.html
@@ -35,7 +35,7 @@
 
             </form>
             <br/>
-            <button class="btn btn-lg btn-info">LOG IN WITH TWITTER</button>
+            <a href="/api/auth/facebook" class="btn btn-lg btn-info">LOG IN WITH FACEBOOK</a>
         </div>
         <div class="col-md-6">
             <form novalidate ng-submit="submitRegisterForm()">
